# botlixio

./: .gitignore  README.md  botlixio_project_brief.md  botlixio_rebuild_plan.md  chatbot_scraper.py  test.html
.claude/: CLAUDE.md  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  arq_worker.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 12bcaf5a6d97_timezone_aware_all_models.py  6ae80da21dee_knowledge_indexing_status_and_agent_tone.py  73f0ec838292_add_verification_token_expires_to_users.py  7747f1da2a72_initial_schema.py  a6b31db395cd_timezone_aware_datetime_columns.py  aed50e10bb9b_add_refresh_token_hash_to_users.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: agents.py  auth.py  channels.py  chat.py  knowledge.py
backend/app/core/: arq_pool.py  config.py  database.py  qdrant.py  security.py
backend/app/models/: __init__.py  agent.py  channel.py  chat_session.py  enums.py  integration.py  knowledge.py  lead.py  subscription.py  tool.py  user.py  workflow.py
backend/app/repositories/: agent_repo.py  chat_repo.py  knowledge_repo.py  user_repo.py
backend/app/schemas/: agent.py  auth.py  chat.py  knowledge.py
backend/app/services/: agent_service.py  auth_service.py  chat_engine.py  chunker.py  crawler.py  document_parser.py  email_service.py  embedder.py  knowledge_service.py  llm_client.py  retriever.py
backend/app/workers/: knowledge_worker.py
backend/specs/: auth.SPEC.md  auth.TEST-CASES.md
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_agent_api.py  test_auth_api.py  test_auth_extended_api.py  test_knowledge_api.py  test_widget_api.py
backend/tests/unit/: test_auth_extended.py  test_auth_extended_service.py  test_auth_schemas.py  test_auth_service.py  test_config.py  test_database.py  test_security.py
tools/tdd-runner/: pyproject.toml
tools/tdd-runner/sessions/tdd_20260322_170632/: transcript.md
tools/tdd-runner/sessions/tdd_20260322_171341/: transcript.md
tools/tdd-runner/sessions/tdd_20260322_171516/: tool_calls.jsonl  transcript.md
tools/tdd-runner/tdd_runner/: __init__.py  main.py
(+132 files in other folders)
